--- a/src/routes/Item.module.css
+++ b/src/routes/Item.module.css
@@ -2,3 +2,28 @@
   width: 100%;
   padding: 3rem;
 }
+.btmContainer{
+  padding:16px;
+  gap:12px;
+display: flex;
+align-items: center;
+justify-content: center;
+}
+
+.btm{
+  padding:16px;
+  gap:12px;
+display: flex;
+align-items: center;
+justify-content: center;
+max-width: 200px;
+width: 200px;
+background-color: lightgreen;
+border-radius: 16px;
+border: 0;
+font-weight: 600;
+font-size: medium;
+}
+ .del{
+  background-color: rgb(240, 73, 73) !important;
+}
